custom-elements/apps/browser.css
.browser {
    --input-height: 2.813rem;

    display: grid;
    padding: 0.438rem;
    grid-template-rows: var(--input-height) calc(100% - var(--input-height));
    padding-top: 0;
}

.browser .top-bar {
    display: flex;
    gap: 0.3rem;
    align-items: center;
}

.top-bar button {
    height: calc(100% - 0.875rem);
    aspect-ratio: 1/1;
    border-radius: 0.25rem;
    border: 0;
    font-weight: 700;
    transition: transform 0.2s;
    font-size: 1rem;
}

.top-bar button:not(:disabled):active {
    transform: scale(0.95);
}

.top-bar button:not(:disabled) {
    cursor: pointer;
}

.browser input {
    box-sizing: border-box;
    width: 100%;
    height: calc(100% - 0.8rem);
    border: 0;
    border-radius: 3px;
    outline: 2px solid transparent;
    padding-inline: 0.625rem;
    font-size: 1rem;
}

.browser input:focus {
    outline-color: transparent;
}

.browser iframe {
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    border-radius: 0.313rem;
    border: 0;
    background-color: white;
}

